[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroshape"
version = "0.0.1"
authors = [
    { name="Systems Neuroscience Group Newcastle", email="nikitas.koussis@gmail.com" },
]
description = "A toolbox for computing LBOs of brainmaps, as well as their gradients, projecting, resampling and comparing brain maps"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
]

[project-urls]
"Homepage" = "https://github.com/breakspear/shape"
"Bug Tracker" = "https://github.com/breakspear/shape/issues"