[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroshape"
version = "0.0.4.2"
description = "For computing connectopic and geometric Laplacian eigenmodes and performing null hypothesis testing. As implementation is ongoing, this description is subject to rapid change."
readme = "README.md"
authors = [
    {name = "Nikitas C. Koussis", email = "nikitas.koussis@gmail.com"},
]
license = { file = "LICENSE" }

[project.urls]
Source = "https://github.com/nikitas-k/neuroshape-dev"
Documentation = "https://github.com/nikitas-k/neuroshape-dev"
